Fixed header on mobile

--- a/assets/css/style-desktop.css
+++ b/assets/css/style-desktop.css
@@ -16,6 +16,10 @@
 	{
 	}
 
+	.docs #logo {
+		display: none !important;
+	}
+
 	header
 	{
 		margin-bottom: 1.6em;
